--- a/pom.xml
+++ b/pom.xml
@@ -9,23 +9,6 @@
     <version>1.0-SNAPSHOT</version>
     <name>drawingboard-micro-coh-sse</name>
 
-    <repositories>
-        <repository>
-            <id>java.net</id>
-            <url>https://maven.java.net/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>maven.oracle.com</id>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <url>https://maven.oracle.com</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -53,12 +36,12 @@
             <artifactId>jersey-media-sse</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.oracle.coherence</groupId>
+            <groupId>com.oracle.coherence.ce</groupId>
             <artifactId>coherence</artifactId>
             <version>${coherence.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.oracle.coherence</groupId>
+            <groupId>com.oracle.coherence.ce</groupId>
             <artifactId>coherence-jcache</artifactId>
             <version>${coherence.version}</version>
         </dependency>
@@ -146,7 +129,7 @@
 
     <properties>
         <jersey.version>2.19</jersey.version>
-        <coherence.version>12.2.1-0-0</coherence.version>
+        <coherence.version>20.06</coherence.version>
         <jcache.version>1.0.0</jcache.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
